# claude-trade

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  Taskfile.yml  biome.json  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: mcp.json
.claude/agents/: code-analyst.md  infra-analyst.md  trading-analyst.md
.github/workflows/: deploy.yml
agent/: Dockerfile  pyproject.toml
agent/src/agent_runner/: config.py  main.py  market.py  markets.py  runner.py  scheduler.py
deploy/: Caddyfile  Dockerfile.ib-gateway  allowed-emails.txt  deploy.sh  docker-compose.prod.yml  oauth2-proxy.cfg  pull-secrets.sh  setup-instance.sh
deploy/systemd/: claude-trade-api.service  claude-trade-scheduler.service  oauth2-proxy.service
docs/: architecture.md  database.md  development.md  feedback-loop.md  index.md  markets.md
docs/.vitepress/: config.ts
docs/adr/: 001-typescript-migration.md  002-orm-selection.md  (+2 more)
mcp-server/: pyproject.toml
mcp-server/src/claude_trade/: config.py  db.py  ib_client.py  models.py  server.py
mcp-server/src/claude_trade/tools/: analytics.py  audit.py  feedback.py  market_data.py  news.py  portfolio.py  research.py  signals.py
prompts/: eod-review.md  final-judge.md  premarket-analysis.md  research-loop.md
scripts/: auto-reconnect.sh  backup-db.sh  dev-tmux.sh  gce-logs.sh  ib-gateway-entrypoint.sh  is_market_open.py  run-eod-review.sh  run-research.sh  run-trading.sh
src/: config.ts
strategies/: eu.yaml  jp.yaml  uk.yaml  us.yaml
trading-engine/: pyproject.toml
trading-engine/src/trading_engine/: audit.py  config.py  executor.py  kill_switch.py  main.py  portfolio_calc.py  risk_engine.py  signal_reader.py
(+22 files in other folders)
