[project]
name = "claude-trade-agent"
version = "0.1.0"
description = "Agent SDK runner for Claude Trade research agent"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10,<4",
    "pytz>=2024.1",
    "tzdata>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runner"]
